# WasmEdge

./: .CurrentChangelog.md  Changelog.md  crates.js  search-index.js  settings.html  source-files.js
.github/workflows/: build.yml
include/plugin/: plugin.h
lib/api/: wasmedge.cpp
plugins/wasmedge_process/: CMakeLists.txt
src/wasmedge_sys/: compiler.rs.html  config.rs.html  error.rs.html  executor.rs.html  import_obj.rs.html  io.rs.html  lib.rs.html  loader.rs.html  module.rs.html  store.rs.html  (+5 more)
wasmedge_sys/: all.html  enum.CompilerOptimizationLevel.html  enum.CompilerOutputFormat.html  enum.ExternalType.html  enum.Mutability.html  enum.RefType.html  enum.ValType.html  index.html  sidebar-items.js  struct.Compiler.html  struct.Config.html  struct.Executor.html  struct.Export.html  struct.FuncType.html  struct.Function.html  struct.Global.html  struct.GlobalType.html  struct.Import.html  struct.ImportObject.html  struct.Instance.html  struct.Loader.html  struct.MemType.html  struct.Memory.html  struct.Module.html  struct.Statistics.html  struct.Store.html  struct.Table.html  struct.TableType.html  struct.Validator.html  struct.Vm.html  struct.WasmValue.html  type.HostFunc.html  type.WasmEdgeResult.html
wasmedge_types/: all.html  enum.CompilerOptimizationLevel.html  enum.CompilerOutputFormat.html  enum.ExternalInstanceType.html  enum.HostRegistration.html  enum.Mutability.html  enum.RefType.html  enum.ValType.html  fn.wat2wasm.html  index.html  struct.FuncType.html  struct.GlobalType.html  struct.MemoryType.html  struct.TableType.html  type.WasmEdgeResult.html
(+118 files in other folders)
